# ert-manifest

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md  ert-manifest-spec.md  ert-manifest.schema.json
src/: cli.rs  error.rs  inference.rs  main.rs  output.rs  schema.rs  stats.rs  types.rs
src/privacy/: bucketing.rs  column_names.rs  mod.rs  name_lists.rs  recoding.rs  suppression.rs  value_patterns.rs
src/readers/: csv.rs  excel.rs  mod.rs  sas.rs  spss.rs  stata.rs
