[package]
name = "ert-manifest"
version = "0.1.1"
edition = "2021"
description = "Privacy-preserving metadata extraction from data files for clinical trial analysis"
license = "MIT"

[dependencies]
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
csv = "1.3"
calamine = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
once_cell = "1.19"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []

[[bin]]
name = "ert-manifest"
path = "src/main.rs"
